--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
   margin: 0;
 }
 
-.dimensions-selector, .graph-data {
+.dimensions-selector,
+.graph-data {
   position: absolute;
   top: 0;
   padding: 5px;
@@ -13,6 +14,7 @@ body {
 
 .dimensions-selector {
   left: 0;
+  z-index: 1;
 }
 
 .graph-data {
